# sentrix

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  WHITEPAPER.md  deny.toml  docker-compose.yml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml
benchmark/: deploy_src20.py  reset_testnet.sh  tps_benchmark.py
crates/sentrix-core/src/: block_executor.rs  blockchain.rs
crates/sentrix-primitives/: Cargo.toml
crates/sentrix-primitives/src/: lib.rs
docs/architecture/: EVM.md  OVERVIEW.md
docs/operations/: API_REFERENCE.md  CI_CD.md  DEVELOPER_QUICKSTART.md  METAMASK.md  NETWORKS.md  SMART_CONTRACT_GUIDE.md  STATE_EXPORT.md  TESTNET_RECOVERY.md  VALIDATOR_GUIDE.md
docs/roadmap/: CHANGELOG.md  PHASE1.md
docs/security/: SECURITY_REPORT.md
src/: lib.rs  main.rs
src/api/: explorer.rs  jsonrpc.rs  mod.rs  routes.rs
src/core/: account.rs  authority.rs  bft.rs  bft_messages.rs  block.rs  block_executor.rs  block_producer.rs  blockchain.rs  chain_queries.rs  epoch.rs  mempool.rs  mod.rs  slashing.rs  staking.rs  state_export.rs  token_ops.rs  transaction.rs  vm.rs
src/network/: behaviour.rs  libp2p_node.rs  node.rs  sync.rs  transport.rs
src/storage/: db.rs
src/wallet/: keystore.rs  mod.rs  wallet.rs
tests/: integration_chain_validation.rs  integration_mempool.rs  integration_p2p.rs  integration_restart.rs  integration_sliding_window.rs  integration_supply.rs  integration_sync.rs  integration_token.rs  integration_trie.rs  integration_tx.rs  integration_voyager.rs
tests/common/: mod.rs
(+9 files in other folders)
