[package]
name = "sentrix-primitives"
version = "1.3.0"
edition = "2024"
license = "BUSL-1.1"
description = "Core types and error handling for Sentrix blockchain"
repository = "https://github.com/satyakwok/sentrix"
keywords = ["blockchain", "sentrix", "types"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
